# OZ_Dev

./: README.md
DB/: airbnb_2.py  (+5 more)
OZ_Backend/Flask_web/: pyproject.toml
OZ_Backend/Flask_web/Flask_1/: app.py
OZ_Backend/Flask_web/Flask_1/templates/: index.html
OZ_Backend/Flask_web/Flask_Blog/: app.py
OZ_Backend/Flask_web/Flask_Blog/static/: style.css
OZ_Backend/Flask_web/Flask_Blog/templates/: edit.html
OZ_Backend/Flask_web/Flask_ORM/: app.py  db.py  models.py
OZ_Backend/Flask_web/Flask_ORM/routes/: board.py  user.py
OZ_Backend/Flask_web/Flask_instargram/: app.py
OZ_Backend/Flask_web/Flask_instargram/templates/: index.html
OZ_Backend/Flask_web/Flask_mysqldb/: app.py  user_routes.py
OZ_Backend/Flask_web/Flask_smorest/: abort_test.py
OZ_Backend/Flask_web/Flask_todo/: app.py
OZ_Backend/Flask_web/Flask_usermanagement/static/: style.css
Project/Django/Blog/: pyproject.toml
Project/Django/Blog/blog/: admin.py  forms.py  models.py  views.py
Project/Django/Blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py
Project/Django/Blog/blog/templates/: base.html  blog_create.html  blog_detail.html  blog_list.html  login.html  signup.html
Project/Django/Blog/config/: settings.py  urls.py
Project/Django/Blog/member/: views.py
Project/Django/Psychology_Test/: pyproject.toml
Project/Django/Psychology_Test/config/: settings.py
Project/Django/Psychology_Test/houses/: admin.py  models.py
Project/Django/Psychology_Test/houses/migrations/: 0001_initial.py
Project/Django/Psychology_Test/users/migrations/: 0001_initial.py
(+119 files in other folders)
