[tool.poetry]
name = "Blog"
version = "0.1.0"
description = ""
authors = ["skwwnlpro <skwwnlpro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
