[tool.poetry]
name = "psychology-test"
version = "0.1.0"
description = "Psychology_test Project"
authors = ["skwwnlpro <skwwnlpro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
